tests/e2e/pass/m15_strlen.ep
# EXIT: 0
# STDOUT: 5
fun main(): void {
    let s = "hello"
    print(itoa(s.len))
    print("\n")
    os.ExitProcess(0)
}
