tests/e2e/fail/len_non_container.ep
# COMPILE_ERROR: len expects str or array, got i64
fun main(): void {
    let n = len(42)
    print(itoa(n))
}
